<resources>
    <string name="app_name">I\'m Off</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="offButton">I\'M OFF</string>

        <string name="title_section1">Inbox</string>
        <string name="title_section2">Friends</string>
        <string name="title_activity_login">Login</string>
        <string name="first_fragment">first fragment</string>
    <string name="to_next_fragment">Next</string>
    <string name="second_fragment">second fragment</string>
        <string name="username_hint">Username</string>
        <string name="password_hint">Password</string>
        <string name="login_button_label">sign in</string>
        <string name="sign_up_text">Don\'t have an account? Sign up!</string>
        <string name="title_activity_sign_up">Sign Up</string>
        <string name="email_hint">Email</string>
        <string name="sign_up_button_label">Sign Up</string>
        <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
        <string name="signup_error_title">Oops!</string>
        <string name="login_error_message">Please make sure you enter a username and password!</string>
        <string name="login_error_title">Oops!</string>
        <string name="menu_logout_label">Logout</string>
        <string name="empty_inbox_label">No new messages!</string>
        <string name="empty_friends_label">Add friends to begin!</string>
        <string name="menu_view_profile">Profile</string>
        <string name="title_activity_edit_friends">Edit Friends</string>
        <string name="error_title">We\'re sorry!</string>
        <string name="title_activity_recepients">Recipients</string>
        <string name="empty_recipients_list">Please select some friends first!</string>
        <string name="title_activity_view_image">ViewImage</string>
        <string name="subtitle">Create.Send.Forget</string>
        <string name="APP_ID">1475898282702418</string>
    <string name="title_activity_mock_profile">MockProfileActivity</string>
    <string name="manager_check">Are you a Manager?</string>
    <string name="title_activity_profile_photo">ProfilePhotoActivity</string>
    <string name="error_external_storage">Externa Storage not available</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_team_status">TeamStatusActivity</string>
    <string name="title_activity_floor_status">FloorStatusActivity</string>
    <string-array name="floor_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>


</resources>


